Error message when login fails during maintenance mode in query strings